proxied-authentication/k8s-yamls/azure-ad/flowsource-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/auth-signin: INGRESS_BASE_URL/oauth2/start?rd=$escaped_request_uri
    nginx.ingress.kubernetes.io/auth-url: http://oauth-proxy.oauth2-proxy.svc.cluster.local:4180/oauth2/auth
    nginx.ingress.kubernetes.io/auth-response-headers: x-auth-request-user, x-auth-request-email
    nginx.ingress.kubernetes.io/configuration-snippet: |
      auth_request_set $auth $upstream_http_authorization;
      proxy_set_header "Auth" $auth;
      proxy_set_header "provider" "microsoft";
    nginx.ingress.kubernetes.io/proxy-buffer-size: "512k"
    nginx.ingress.kubernetes.io/server-snippet: |
      large_client_header_buffers 8 32k;
  name: nginx-ingress
  labels:
    app: flowsource
  name: flowsource-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: INGRESS_DNS
    http:
      paths:
      - backend:
          service:
            name: flowsource
            port:
              number: 7007
        path: /
        pathType: Prefix
